--- a/learning_web/public/locales/en/translation.json
+++ b/learning_web/public/locales/en/translation.json
@@ -46,6 +46,7 @@
   "practice_modal_title": "Practice lesson",
   "practice_modal_description": "Use practice lessons to regain hearts and points. You cannot lose hearts or points in practice lessons.",
   "practice_modal_understand": "I understand",
+  "login": "Login",
 
 
    "unit_20001_title": "Unit 1: Absolute Foundation",
