--- a/learning_web/public/locales/vi/translation.json
+++ b/learning_web/public/locales/vi/translation.json
@@ -46,6 +46,7 @@
   "practice_modal_title": "Bài luyện tập",
   "practice_modal_description": "Sử dụng các bài luyện tập để hồi lại tim và điểm. Bạn không bị mất tim hay điểm trong các bài học này.",
   "practice_modal_understand": "Tôi đã hiểu",
+  "login": "Đăng nhập",
 
   
   "unit_20001_title": "Bài 1: Nền tảng tuyệt đối",
